@@ -192,6 +192,7 @@ TESTS+=	tests/explain_+i-c.test \
 	tests/explain_a5fd_pi.test \
 	tests/explain_a_nd_i.test \
 	tests/explain_a_re_i.test \
+	tests/explain_aai.test \
 	tests/explain_ac9i.test \
 	tests/explain_af-c.test \
 	tests/explain_al3_c.test \
